crates/keron-lang/tests/corpus/errors/check/secret_coalesce_rejected.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `??` requires the left side to be a nullable type (`T?`), found `Secret`
  --> 6:17
  |
6 | val s: Secret = secret("op://Vault/Item/field") ?? secret("op://Vault/Backup/field")
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
